--- a/frontend2/src/components/Navbar.css
+++ b/frontend2/src/components/Navbar.css
@@ -6,7 +6,7 @@
   align-items: center;
   font-size: 1.2rem;
   box-shadow: 0px 1px 0px rgb(131, 129, 129);
-  position: fixed;
+  /* position: fixed; */
   width:100%;
 }
 .navbar2{
